fix(scss/project/headers): rises `z-index` over everything

--- a/source/sass/main/project/_header.scss
+++ b/source/sass/main/project/_header.scss
@@ -10,6 +10,7 @@
   @include position(fixed, 0 0 none);
   background: #f7f7f7;
   padding: 24px 0;
+  z-index: 1000;
 
   &_logo {}
 
